--- a/src/App.scss
+++ b/src/App.scss
@@ -842,9 +842,62 @@ ul {
 }
 
 .navbar {
-    padding-top: 0.75rem !important;
+    padding-top: 0.65rem !important;
 }
 
+.profileDropdown {
+    width: 20vw;
+}
+
+.profileDropdown a {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.profileDropdownButton {
+    background: none;
+    background-color: var(--darkBase);
+    border: none;
+    width: 2.5rem;
+    height: 2.5rem;
+    padding: 0;
+    margin-right: 1rem;
+}
+.profileDropdownButton::after {
+    display: none;
+}
+
+.profileDropdownButton > img {
+    width: 100%;
+    height: 100%;
+    border-radius: 200px;
+}
+.profileDropdownLink {
+    background: transparent;
+    border: none;
+    width: 100%;
+    padding: 0.5rem 0 0.5rem 1rem;
+    text-align: left;
+}
+
+.profileDropdownLink span, .profileDropdownLink svg{
+    color: white;
+}
+
+.toast {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 999;
+    height: 5vh;
+    width: 15vw;
+    top: 80vh;
+    left: 43.5vw;
+    color: black;
+    font-size: 1.1rem;
+    background-color: var(--darkAccentTranslucid);
+}
 /* --------------------- SEARCH BAR ---------------------*/
 
 .searchBarButton {
@@ -1067,8 +1120,21 @@ ul {
     text-align: start;
 }
 
+.dropdown-menu {
+    margin-right: -1rem;
+    background-color: var(--darkBase);
+/*     border: 2px solid var(--darkAccent); */
+    border-radius: 12px;
+}
+
+.dropdown-item:hover {
+    background-color: var(--darkBase);
+}
+
+
 .statsMainRow .dropdown-menu {
     height: 15rem;
+    width: 5rem;
     overflow-y: scroll;
 }
 
@@ -1183,6 +1249,7 @@ input[type=password] {
 
 input[type=number] {
   -moz-appearance: textfield;
+  appearance: textfield;
   color: white;
 }
 
