--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,3 @@
-@import "~bootstrap/scss/bootstrap";
-
 :root {
 
     --lightBase: #e4e4e4;
@@ -18,6 +16,10 @@
     --darkBgHover: #9fa6cc20;
     --darkFormField: #121318;
 }
+
+$primary: #9fa6cc;
+
+@import "~bootstrap/scss/bootstrap";
 
 html {
     display: flex;
@@ -104,7 +106,9 @@ ul {
 }
 
 .appLogo {
-    height:100%;
+    object-fit: contain;
+    max-height: 100%;
+    height: 100%;
     width: auto;
 }
 
@@ -210,6 +214,10 @@ ul {
 }
 
 /* --------------------- NAV BAR --------------------- */
+
+.navbar {
+    margin-top: 1.2vh;
+}
 
 .navbarMobile li {
     margin: 1.5rem;
@@ -827,6 +835,7 @@ ul {
 
 .topMenuMobile {
     margin: 0;
+    padding: 0;
     position: fixed;
     width: 100%;
     z-index: 999;
@@ -834,15 +843,14 @@ ul {
     border-bottom: 1px solid var(--darkAccent);
     padding-left: 1rem;
     height: 8vh;
+    display: flex;
+    justify-content: space-around;
 }
 
-.topMenuMobile > div {
-    display: inline-block;
-    width: 75%;
-}
-
-.navbar {
-    padding-top: 0.65rem !important;
+.topMenuMobile  > div {
+    text-align: center;
+    height: 80%;
+    max-height: 80%;
 }
 
 .profileDropdown {
@@ -904,16 +912,21 @@ ul {
     background: none;
     border: none;
     color:var(--darkAccent);
+}
 
+.searchBarField {
+    background: none;
+    border: none;
+    color:var(--darkAccent);
 }
 
 .searchBarLoading {
     color: var(--darkAccent);
 }
-.buttonContainer {
-    width: 30px;
-    height: 30px;
-    margin-left: -2.1rem;
+.searchBar {
+    color: white;
+    background-color: var(--darkFormField);
+    border-radius: 16px;
 }
 
 /* --------------------- SEARCH RESULTS ---------------------*/
@@ -1214,6 +1227,12 @@ input[type="text"] {
     background-color: var(--darkFormField);
 }
 
+.btn-primary:hover .btn-primary:focus {
+    background: none !important;
+    box-shadow: none !important;
+    border-color: white !important;
+}
+
 .mb-3{
     margin-bottom: 0.75rem !important;
 }
@@ -1336,10 +1355,6 @@ a:hover {
     }
     .authFormProviderButton .reducedSpanAuthFormProviderButton{
         display: inline-block;
-    }
-    .searchBar {
-        margin-left: 5%;
-        width: 90%;
     }
 
     ::-webkit-scrollbar {
