--- a/src/App.scss
+++ b/src/App.scss
@@ -638,6 +638,14 @@ ul {
     text-overflow: ellipsis;
 }
 
+.formLabel label {
+    color:var(--darkAccent) !important;
+}
+label::after {
+    
+    background: none !important;
+}
+
 .formGroup {
     padding: 0.5rem;
     margin: 0.5rem;
@@ -851,7 +859,8 @@ ul {
 }
 
 .topMenuMobile  > div {
-    text-align: center;
+    padding-left: 1.5rem;
+    padding-right: 1rem;
     height: 80%;
     max-height: 80%;
 }
@@ -1176,7 +1185,6 @@ ul {
 }
 
 .statDivRow {
-    width: 100%;
     margin: auto;
     margin-left: 3rem;
     padding: 0.5rem;
