--- a/src/App.scss
+++ b/src/App.scss
@@ -127,7 +127,6 @@ ul {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
     width: 50%;
     border-radius: 12px;
     background-color: var(--darkBase);
@@ -213,6 +212,10 @@ ul {
     font-size: 1.5rem;
     color: var(--darkAccent);
     text-decoration: none;
+}
+
+.invalid-feedback {
+    padding-left: 1rem;
 }
 
 /* --------------------- NAV BAR --------------------- */
@@ -310,6 +313,15 @@ ul {
     max-height: 100%;
     padding: 0;
     width: 80%;
+}
+
+.emptyListMessage {
+    width: 100%;
+    height: 100%;
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .gamesForm {
@@ -628,6 +640,13 @@ ul {
 .inputText:hover, .inputText:focus{
     color: white;
     background-color: var(--darkFormField);
+}
+
+.inputButton {
+    background-color: var(--darkFormField);
+    border: none;
+    border-radius: 12px;
+    color: var(--darkAccent)
 }
 
 .formLabel {
@@ -1194,7 +1213,7 @@ label::after {
     align-items: center;
 }
 
-.statsRanking > .row > .col-md-11 {
+.statsRanking > .row  {
     padding: 0.3rem;
     color: white;
 }
