--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@use "~bootstrap/scss/bootstrap";
+
 :root {
 
     --lightBase: #e4e4e4;
@@ -9,6 +11,7 @@
     --lightBgHover: #b4b4b420;
 
     --darkBase: #1a1c24;
+    --darkBaseScrollbar: #16181f;
     --darkAccent: #9fa6cc;
     --darkAccentTranslucid: #9fa6ccbb;
     --darkBgAccent: #2d333c88;
@@ -19,15 +22,13 @@
 
 $primary: #9fa6cc;
 
-@import "~bootstrap/scss/bootstrap";
-
 html {
     display: flex;
     height: 100%;
     background: linear-gradient(#0f1214fa,
             #0f1214fa),
         url(../public/img/background.png);
-    background-size: auto;
+    background-size: 100%;
     background-repeat: repeat-y;
 }
 
@@ -370,7 +371,18 @@ ul {
     flex: auto;
 }
 
+.gameSortWrapper {
+    display: flex;
+    position: relative;
+    justify-content: flex-end;
+    align-items: center;
+}
+
 .gameSortHandle{
+    position: absolute;
+    top: 50%;
+    left: 100%;
+    transform: translate(-50%, -50%);
     outline: none;
     border: none;
     background: none;
@@ -380,6 +392,10 @@ ul {
 }
 
 .gameSortIndex{
+    position: absolute;
+    top: 50%;
+    left: 100%;
+    transform: translate(-50%, -50%);
     display: inline-block;
     vertical-align: middle;
     font-size: 1.1rem;
@@ -506,6 +522,12 @@ ul {
     align-items: center;
 }
 
+.gameTitle {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .gameRating {
     margin: auto;
     width: 100%;
@@ -518,10 +540,10 @@ ul {
 /* --------------------- BUTTONS --------------------- */
 
 .rightButton {
+    flex: 1;
     display: none !important;
-    justify-content: flex-end;
+    justify-content: space-evenly;
     align-items: center;
-    padding-left: 4rem;
 }
 
 .buttonAdd {
@@ -541,11 +563,7 @@ ul {
 }
 
 .buttonRemove {
-    margin: auto;
     outline: none;
-    padding: 0;
-    padding-left: 2rem;
-    padding-right: 2rem;
     border: none;
     background: none;
     font-size: 1.7rem;
@@ -553,9 +571,7 @@ ul {
 }
 
 .buttonEdit {
-    margin: auto;
     outline: none;
-    padding: 0;
     border: none;
     background: none;
     font-size: 1.5rem;
@@ -703,6 +719,7 @@ label::after {
 
 .formGroupBordered {
     padding: 0.5rem;
+    padding-bottom: 0;
     margin: 0.5rem;
     margin-bottom: 0;
     background-color: var(--darkBase);
@@ -714,6 +731,38 @@ label::after {
     margin: 0.5rem;
     background-color: var(--darkBase);
     border-radius: 12px;
+}
+
+.formGroupGameDetails {
+    padding: 0.5rem;
+    margin: 0;
+    background-color: var(--darkBase);
+    border-radius: 12px;
+    width: 100%;
+}
+
+.gameDetailsWrapper {
+    display: inline-grid;
+    align-items: self-start;
+    grid-template-columns: 20% 80%;
+    margin: 0 0.5rem;
+    border-radius: 12px;
+}
+
+.formImage {
+    display: block;
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+
+.formImageWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 0.7rem 0 0;
+    height: auto;
+    width: 100%;
 }
 
 .formHeader {
@@ -730,6 +779,7 @@ label::after {
 
 .ratingsSubLabel {
     margin-bottom: 0 !important;
+    color: white;
 }
 .ratingsRow  {
     justify-content: space-between;
@@ -1082,6 +1132,7 @@ label::after {
     transform: rotate(3420deg);
   }
 .searchedGame {
+    margin: 0 2rem 0 2rem;
     padding: 0.75rem 0 0.75rem 0.75rem;
     border-radius: 12px;
 }
@@ -1103,38 +1154,24 @@ label::after {
 
 .gameImage {
     display: block;
-    width: 12vw;
-    height: 12vh;
+    width: 7vw;
+    height: auto;
+    object-fit: contain;
     border-radius: 8px;
 }
 
 .gameListImage {
     border-radius: 8px;
-    display: block;
-    width: 100px;
-    height: 60px;
+    width: auto;
+    height: 6vh;
+    margin: 2px;
 }
 
 .gameImageWrapper {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
 }
-
-/* .game:hover .gameListImage {
-    width: 200px;
-    height: 110px;
-    transition: 1s ease-in-out;
-
-} */
-/* .game:hover .focusedGameInfo {
-    visibility: visible;
-    transition: visibility 1s ease-in-out;
-}
-
-.game:hover .mainGameInfo {
-    visibility: hidden;
-    transition: visibility 1s ease-in-out;
-} */
 
 .col-md-10 .col-md-1, .col-md-10 .col-md-3, .col-md-10 .col-md-2 {
     display: flex;
@@ -1144,35 +1181,9 @@ label::after {
 
 .imageContainer {
     position: relative;
-    width: min-content;
-}
-
-.imageOverlay {
-    position: absolute;
-    bottom: 25%;
-    left: 96%;
-    right: 0;
-    overflow: hidden;
-    width: 4%;
-    height: 50%;
-    transition: .5s ease;
-    border: 2px solid var(--darkAccent);
-    border-right: none;
-    background-color: rgba(0, 0, 0, 0.6);
-}
-
-.imageContainer:hover .imageOverlay {
-    width: 50%;
-    left: 50%;
-}
-
-.imageOverlay * {
-    color: var(--darkAccent);
-    font-size: 1.8rem;
-    position: relative;
-    top: 25%;
-    left:35%;
-
+    height: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .pagesNavWrapper {
@@ -1445,8 +1456,9 @@ a:hover {
   
 /* Track */
 ::-webkit-scrollbar-track {
-    background: var(--darkBase); 
-    border-radius: 10px;
+    background: var(--darkBaseScrollbar); 
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
    
 /* Handle */
