--- a/src/App.scss
+++ b/src/App.scss
@@ -65,17 +65,17 @@ ul {
     margin: 0;
     padding: 0.5rem;
     padding-top: 8.7vh;
-    /* background-color: var(--darkBgBase); */
 }
 
 .mainContainerMobile {
     flex: 1;
     overflow-y: auto;
     margin: 0;
+    padding-top: 8vh;
     background-color: rgba(17, 17, 17, 0.363)
 }
 
-.mainContainer > .row, .mainContainerMobile > .row {
+.mainContainer > .row {
     padding: 0 !important;
     height: 100%;
 }
@@ -106,11 +106,6 @@ ul {
     max-height: 100%;
     height: 100%;
     width: auto;
-}
-
-.gamesList {
-    width: 93vw;
-    height: 100%;
 }
 
 .faIconButton, .faIconButton:hover, .faIconButton:focus, .faIconButton:active{
@@ -1095,7 +1090,7 @@ label::after {
     height: 8vh;
 }
 
-.topMenuMobile {
+/* .topMenuMobile {
     margin: 0;
     padding: 0;
     position: sticky;
@@ -1108,6 +1103,52 @@ label::after {
     height: 8vh;
     display: flex;
     justify-content: space-around;
+} */
+
+.topMenuMobile,
+.bottomMenuMobile {
+    position: fixed;
+    margin: 0;
+    left: 0;
+    right: 0;
+    height: 8vh;
+    background-color: var(--darkBase);
+    color: white;
+    text-align: center;
+    transition: transform 0.5s ease, opacity 0.5s ease;
+    will-change: transform, opacity;
+    z-index: 2;
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+.topMenuMobile {
+    top: 0;
+    border-bottom-right-radius: 16px;
+    border-bottom-left-radius: 16px;
+}
+
+.bottomMenuMobile {
+    bottom: 0;
+    border-top-right-radius: 16px;
+    border-top-left-radius: 16px;
+}
+
+.topMenuMobile.hidden {
+    transform: translateY(-100%);
+    opacity: 0;
+}
+  
+.bottomMenuMobile.hidden {
+    transform: translateY(100%);
+    opacity: 0;
+}
+  
+.topMenuMobile.visible,
+.bottomMenuMobile.visible {
+    transform: translateY(0);
+    opacity: 1;
 }
 
 .topMenuMobile  > div {
@@ -1115,6 +1156,56 @@ label::after {
     padding-right: 1rem;
     height: 80%;
     max-height: 80%;
+}
+
+.bottomMenuMobileItem {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.floatingMobileSort {
+    position: absolute;
+    bottom: 12%;
+    right: 12%;
+    width: 13vw;
+    height: 13vw;
+    background-color: var(--darkBase);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.5s ease, opacity 0.5s ease;
+    will-change: transform, opacity;
+    z-index: 2;
+}
+
+.floatingMobileSort.visible {
+    transform: translateX(0);
+    opacity: 1;
+}
+
+.floatingMobileSort.hidden {
+    transform: translateX(150%);
+    opacity: 0;
+}
+
+.floatingMobileSort .faIconButton::after {
+    display: none;
+}
+
+.floatingMobileSortItem{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+.floatingMobileSortItem svg {
+    width: min-content;
+    padding: 0 !important;
+    margin-right: 10%;
 }
 
 .profileDropdown {
@@ -1401,6 +1492,12 @@ label::after {
     background-color: var(--darkBase);
 }
 
+.dropdown-item:focus, 
+.dropdown-item:active {
+    color: white;
+    background-color: transparent;
+}
+
 .dropdown-menu .dropdown-item:not(:last-child) {
     border-bottom: 2px solid var(--darkBgAccent);
 }
@@ -1582,19 +1679,6 @@ a:hover {
 .mainContainer .row, .mainContainerMobile .row {
     --bs-gutter-x: 0;
 }
-
-.slick-next {
-    right: 1rem !important;
-}
-.slick-prev {
-    left: 1rem !important;
-}
-
-/* .slick-arrow {
-    z-index: 100;
-    background: none;
-    top: 2.9vh !important;
-} */
 
 .btn-dark:focus, .btn-dark:hover, .show > .btn-dark.dropdown-toggle {
     background: none !important;
